# CTO.new_folder

./: .env.example  .eslintrc.json  .gitignore  API_KEY_CONFIGURATION.md  API_KEY_INPUT_IMPLEMENTATION.md  API_KEY_SETUP.md  CHANGELOG_BUGFIX.md  CHANGELOG_CRAWLING_FIX.md  CHANGES_SUMMARY.md  CHANGES_SUMMARY_FIX.md  CHECKLIST.md  CLI_BOOTSTRAP_SUMMARY.md  COMMIT_MESSAGE.txt  CRAWLING_FIX_SUMMARY.md  DEBUG_LOGGING_IMPLEMENTATION.md  DEPLOYMENT.md  FIX_504_TIMEOUT.md  FIX_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_PARSER.md  IMPLEMENTATION_FILES_API.md  IMPLEMENTATION_README.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.md  NETLIFY_DEPLOYMENT_COMPLETE.md  NETLIFY_PUPPETEER_FIX.md  NETLIFY_QUICK_START.md  PARSER_WORKFLOW_COMPLETE.md  PERSONALIZATION_IMPROVEMENTS.md  PRE_COMMIT_CHECKS.md  PR_DESCRIPTION.md  PUPPETEER_FIX_SUMMARY.md  QUICK_START.md  QUICK_TEST_GUIDE.md  README.md  README_504_FIX.md  README_COMPLETE_PARSER.md  README_IMPLEMENTATION.md  README_SPLINE.md  (+38 more)
.github/workflows/: auto-merge.yml
.husky/: pre-commit  pre-push
adlook_cli/: README.md  __init__.py  __main__.py  cli.py  config.py
adlook_cli/utils/: __init__.py  file_utils.py  logging_utils.py  stats_utils.py
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  Makefile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: complete_routes.py  routes.py
backend/app/services/: ai_analyzer.py  complete_parser.py  crawler.py  exporter.py  proposal_generator.py
components/ui/: demo.tsx  (+1 more)
frontend/: README.md  index.html
(+7 files in other folders)
